--- a/src/pages/About.module.css
+++ b/src/pages/About.module.css
@@ -48,16 +48,13 @@
   text-shadow: 0 2px 12px rgba(0,0,0,0.25);
 }
 .scrollDownIcon {
-  position: absolute;
-  left: 50%;
-  top: calc(50% + 2.5rem);
-  transform: translate(-50%, 0);
-  margin: 0;
   display: inline-block;
+  margin-top: 2rem;
   cursor: pointer;
   opacity: 0.95;
   transition: opacity 0.2s, transform 0.2s;
   z-index: 4;
+  position: static;
 }
 .animatedArrow {
   animation: bounceDown 1.5s infinite;
@@ -69,7 +66,7 @@
 }
 .scrollDownIcon:hover, .scrollDownIcon:focus {
   opacity: 1;
-  transform: scale(1.15) translate(-50%, 0);
+  transform: scale(1.15);
   outline: none;
 }
 .scrollDownIcon:focus {
